--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
         <a href="https://vasileios-mavroeidis.github.io/cyberhunt2020.github.io/" class="btn">Home</a>
         <a href="https://wi-lab.com/cyberchair/2020/bigdata20/scripts/submit.php?subarea=S01&undisplay_detail=1&wh=/cyberchair/2020/bigdata20/scripts/ws_submit.php" class="btn">SUBMIT Your Paper</a>
-        <a href="organization.md" class="btn">Organization</a>
+        <a href="https://vasileios-mavroeidis.github.io/cyberhunt2020.github.io/organization.md" class="btn">Organization</a>
         <a href="" class="btn">WikiCFP</a>
         <a href="http://bigdataieee.org/BigData2020/" class="btn">IEEE BigData 2020</a>
 
