--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
       <h2>CyberHunt 2020</h2>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="https://vasileios-mavroeidis.github.io/cyberhunt2020.github.io/" class="btn">Home</a>
+        <a href="https://vasileios-mavroeidis.github.io" class="btn">Home</a>
         <a href="https://wi-lab.com/cyberchair/2020/bigdata20/scripts/submit.php?subarea=S01&undisplay_detail=1&wh=/cyberchair/2020/bigdata20/scripts/ws_submit.php" class="btn">SUBMIT Your Paper</a>
-        <a href="https://vasileios-mavroeidis.github.io/cyberhunt2020.github.io/organization.md" class="btn">Organization</a>
-        <a href="" class="btn">WikiCFP</a>
+        <a href="https://vasileios-mavroeidis.github.io/organization.md" class="btn">Organization</a>
+        <a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=103900" class="btn">WikiCFP</a>
         <a href="http://bigdataieee.org/BigData2020/" class="btn">IEEE BigData 2020</a>
 
 
