--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
    
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">The International Workshop on Big Data Analytics on Cyber Threat Hunting</h1>
+      <h1 class="project-name">International Workshop on Big Data Analytics for Cyber Threat Hunting</h1>
       <h2>CyberHunt 2020</h2>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
